# firefox-releases

./: .gitignore  .pre-commit-config.yaml  CNAME  Makefile  README.md  Taskfile.yaml  firefox-releases.code-workspace  generate.py  generate_rss.py  index.html  index.json  index.rss  index.xml  pyproject.toml  requirements.txt
.github/workflows/: generate-rss.yaml  pre-submit.yaml
firefox_releases/: __init__.py  releases.py  releases_test.py
firefox_releases/testdata/: 122_0.html  firefox_releases.html  wt_releases.json
templates/: index.html.j2  index.xml.j2
