[tool.poetry]
name = "firefox-releases"
version = "0.1.0"
description = "List Firefox releases"
authors = ["Sandip Bhattacharya <sandipb@showmethesource.org>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/sandipb/firefox-releases"
packages = [{ include = "firefox_releases" }]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
ipython = "^8.20.0"
pylint = "^3.0.3"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"
poetry-plugin-export = "^1.6.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
