[project]
name = "firefox-releases"
version = "0.1.0"
description = "List Firefox releases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "jinja2>=3.1.4",
    "requests>=2.32.3",
]
authors = [
    { name = "Sandip Bhattacharya", email = "sandipb@showmethesource.org" }
]
license = "Apache-2.0"

[tool.uv]
dev-dependencies = [
    "ipython>=8.28.0",
    "pre-commit>=4.0.1",
    "pylint>=3.3.1",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.9",
]

[project.urls]
"Homepage" = "https://github.com/sandipb/firefox-releases"
"Repository" = "https://github.com/sandipb/firefox-releases"
